Build: Removed jquery.mobile prefix from filenames
Moved support.* into support/
Moved zoom.* into zoom/

--- a/tests/unit/event/index.html
+++ b/tests/unit/event/index.html
@@ -14,7 +14,7 @@
 
 	<script src="../../../js/jquery.mobile.define.js"></script>
 	<script src="../../../js/ns.js"></script>
-	<script src="../../../js/support.touch.js"></script>
+	<script src="../../../js/support/touch.js"></script>
 	<script src="../../../js/events.js"></script>
 	<script src="../../../js/vmouse.js"></script>
 	<script src="../../../js/events/touch.js"></script>
