Panel: Do not store ID inside the widget
Fixes gh-6769

--- a/tests/unit/panel/index.html
+++ b/tests/unit/panel/index.html
@@ -70,6 +70,9 @@
 		<div data-nstest-role="panel" id="panel-test-ignore-unrelated-link">
 			<a href="#" id="unrelated-link" data-nstest-ajax="false">Unrelated link</a>
 		</div>
+		<div data-nstest-role="panel" id="panel-test-id-change">
+			<p>Contents of a panel.</p>
+		</div>
 		<div data-nstest-role="header">
 			<h1>Panel Test</h1>
 		</div>
@@ -85,6 +88,7 @@
 			<a href="#panel-test-destroy">Open Panel</a>
 			<a href="#panel-test-non-default-theme">Open Panel</a>
 			<a href="#panel-test-with-close">Open Panel</a>
+			<a href="#panel-test-id-change">Open Panel</a>
 		</div>
 	</div>
 
