Button: Sync disabled state upon refresh()
Fixes gh-7139

--- a/tests/unit/button/index.html
+++ b/tests/unit/button/index.html
@@ -64,6 +64,7 @@
 			<button id="theme-check-explicit" value="foo" data-nstest-theme="a"></button>
 			<button id="contains-html">Supports <sup>phrasing content</sup></button>
 			<input type="button" id="val-contains-html" value="<fake markup>"/>
+			<input type="button" id="disabled-state" value="ABC"/>
 		</div>
 	</div>
 </body>
