Checkboxradio: Always uncheck the rest of the input set upon input click
Closes gh-7183
Fixes gh-7180

--- a/tests/unit/checkboxradio/index.html
+++ b/tests/unit/checkboxradio/index.html
@@ -40,6 +40,12 @@
 	<div data-nstest-role="page" data-nstest-theme="b">
 		<div data-nstest-role="content" id="the-content">
 
+			<div id="programmatic-click-test">
+				<label>Radio 1<input type="radio" name="programmatic-click-test" checked></label>
+				<label>Radio 2<input type="radio" name="programmatic-click-test"></label>
+				<label>Radio 3<input type="radio" name="programmatic-click-test"></label>
+			</div>
+
 			<input type="checkbox" id="chk['3']-1"></input>
 			<label for="chk['3']-1">Checkbox label</label>
 
