Selectmenu: Correctly pass theme and overlayTheme to popup
Closes gh-7196
Fixes gh-7195

(cherry picked from commit 4434822486adb5e28e44f59e44daa8b42f3501d1)

--- a/tests/unit/select/index.html
+++ b/tests/unit/select/index.html
@@ -34,8 +34,8 @@
 	<div data-nstest-role="page">
 		<div data-nstest-role="content">
 		<div data-role="fieldcontain">
-			<label for="role-test">Multiple:</label>
-			<select name="role-test" id="role-test" multiple="multiple" data-nstest-native-menu="false">
+			<label for="enhance-test">Multiple:</label>
+			<select name="enhance-test" id="enhance-test" multiple="multiple" data-nstest-native-menu="false" data-nstest-overlay-theme="b" data-nstest-theme="x">
 			<option>Choose options</option>
 			<option value="1">The 1st Option</option>
 			<option value="2" selected="selected">The 2nd Option</option>
