All: Fix demos markup inconsistencies discovered by cheerio
Closes gh-7212
Fixes gh-7211

--- a/demos/pages-dialog/dialog-with-select.html
+++ b/demos/pages-dialog/dialog-with-select.html
@@ -32,7 +32,7 @@
 
 		<div role="main" class="ui-content">
 
-			<form action>
+			<form action="">
 				<div class="ui-field-contain">
 					<label for="select-choice-1" class="select">Choose shipping method:</label>
 					<select name="select-choice-1" id="select-choice-1" data-native-menu="false">
