--- a/demos/pages/samepagetransition.html
+++ b/demos/pages/samepagetransition.html
@@ -34,8 +34,8 @@
   <div role="main" class="ui-content">
      <h1>same page transitions</h1>
      <div>All links within this page navigate to the page itself having the <code>allowSamePageTransition</code> option at <code>changePage()</code> method set to <strong>true</strong>. It seems, just the slide transition raises an issue so the page gets hidden.
-      <label><input type="checkbox" id="cb1" data-theme="b"/> reverse transition </label>
-      <label><input type="checkbox" id="cb2" data-theme="b"/> add ui-page-active on pageshow </label>
+      <label><input type="checkbox" id="cb1" data-theme="b"> reverse transition </label>
+      <label><input type="checkbox" id="cb2" data-theme="b"> add ui-page-active on pageshow </label>
     </div>
       <div id="p1"></div>
     </div><!-- /content 1 -->
