Filterable: Make sure default is prevented on ENTER

--- a/tests/unit/filterable/index.html
+++ b/tests/unit/filterable/index.html
@@ -49,6 +49,14 @@
 		<div class="ui-content">
 			<div id="hidedividers-option-test" data-nstest-role="listview" data-nstest-filter="true">
 			</div>
+			<form id="test-input-preventDefault-form">
+				<input id="test-input-preventDefault">
+			</form>
+			<ul data-nstest-filter="true" id="test-input-preventDefault-list" data-nstest-input="#test-input-preventDefault">
+				<li>Alabama</li>
+				<li>California</li>
+				<li>Oregon</li>
+			</ul>
 		</div>
 	</div>
 
